--- a/configs/config.json
+++ b/configs/config.json
@@ -1,10 +1,10 @@
 {
   "research": {
     "llm": {
-      "provider": "openai",
-      "model": "gpt-5",
+      "provider": "gemini",
+      "model": "gemini-3.0-preview",
       "temperature": 0.2,
-      "reasoning_effort": "low"
+      "reasoning_effort": "high"
     },
     "collections": {
       "research_collection": "research-sessions"
