--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ dependencies = [
     "llama-index-llms-openai>=0.6.6",
     "respx>=0.22.0,<1",
     "llama-cloud>=1.0.0b7",
+    "oxylabs>=2.0.0",
+    "llama-index-readers-oxylabs>=0.1.2",
+    "llama-index-readers-web>=0.5.6",
+    "trafilatura>=2.0.0",
 ]
 
 [project.scripts]
