--- a/configs/config.json
+++ b/configs/config.json
@@ -12,6 +12,7 @@
     "settings": {
       "max_report_update_size": 800,
       "max_search_results_per_query": 5,
+      "min_sources": 2,
       "max_sources": 20,
       "timeout_seconds": 600
     }
