--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "llama-index-readers-web>=0.5.6",
     "trafilatura>=2.0.0",
     "llama-index-llms-google-genai>=0.8.7",
+    "tiktoken>=0.11.0",
 ]
 
 [project.scripts]
