--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "deep-research"
 version = "0.1.0"
 description = "Deep Research planning workflows"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "llama-index-workflows>=2.13.0,<3.0.0",
     "python-dotenv>=1.1.0",
@@ -20,6 +20,7 @@ dependencies = [
     "trafilatura>=2.0.0",
     "llama-index-llms-google-genai>=0.8.7",
     "tiktoken>=0.11.0",
+    "apply-patch-py>=0.4.0",
 ]
 
 [project.scripts]
