Update gemini to 2.5 flasj

--- a/configs/config.json
+++ b/configs/config.json
@@ -8,7 +8,7 @@
     },
     "searcher": {
       "main_llm": {
-        "model": "gemini-3-flash-preview",
+        "model": "gemini-2.5-flash",
         "temperature": 0.2
       },
       "weak_llm": {
